--- a/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/openapi-client/src/main/openapi3/master_rest_v1.yaml
@@ -162,8 +162,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/HandleResponse'
 
-  /api/v1/workers/unavailable:
-    delete:
+  /api/v1/workers/remove_unavailable:
+    post:
       tags:
         - Worker
       operationId: removeWorkersUnavailableInfo
