--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
     <module>service</module>
     <module>master</module>
     <module>worker</module>
-    <module>web</module>
   </modules>
 
   <distributionManagement>
@@ -1761,6 +1760,13 @@
         <module>client-mr/mr</module>
         <module>client-mr/mr-shaded</module>
         <module>tests/mr-it</module>
+      </modules>
+    </profile>
+
+    <profile>
+      <id>web</id>
+      <modules>
+        <module>web</module>
       </modules>
     </profile>
 
