--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <module>master</module>
     <module>worker</module>
     <module>web</module>
+    <module>cli</module>
   </modules>
 
   <distributionManagement>
@@ -105,6 +106,7 @@
     <jackson.version>2.15.3</jackson.version>
     <snappy.version>1.1.10.5</snappy.version>
     <ap.loader.version>3.0-8</ap.loader.version>
+    <commons-cli.version>1.9.0</commons-cli.version>
 
     <!-- Db dependencies -->
     <mybatis.version>3.5.15</mybatis.version>
@@ -708,6 +710,11 @@
         <artifactId>bcpkix-jdk18on</artifactId>
         <version>${bouncycastle.version}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${commons-cli.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
