--- a/pom.xml
+++ b/pom.xml
@@ -889,6 +889,7 @@
             </systemProperties>
             <environmentVariables>
               <CELEBORN_LOCAL_HOSTNAME>localhost</CELEBORN_LOCAL_HOSTNAME>
+              <FLINK_VERSION>${flink.version}</FLINK_VERSION>
             </environmentVariables>
             <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
@@ -927,6 +928,7 @@
             </systemProperties>
             <environmentVariables>
               <CELEBORN_LOCAL_HOSTNAME>localhost</CELEBORN_LOCAL_HOSTNAME>
+              <FLINK_VERSION>${flink.version}</FLINK_VERSION>
             </environmentVariables>
           </configuration>
           <executions>
