--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <module>service</module>
     <module>master</module>
     <module>worker</module>
-    <module>web</module>
+    <!--module>web</module-->
   </modules>
 
   <distributionManagement>
