--- a/pom.xml
+++ b/pom.xml
@@ -965,6 +965,7 @@
               <arg>-explaintypes</arg>
               <arg>-Xfatal-warnings</arg>
               <arg>-P:silencer:globalFilters=.*deprecated.*</arg>
+              <arg>-Ywarn-unused:imports</arg>
             </args>
             <compilerPlugins>
               <compilerPlugin>
