--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -71,6 +71,13 @@
     </dependency>
     <dependency>
       <groupId>org.apache.celeborn</groupId>
+      <artifactId>celeborn-common_${scala.binary.version}</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.celeborn</groupId>
       <artifactId>celeborn-master_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
