--- a/worker/pom.xml
+++ b/worker/pom.xml
@@ -139,6 +139,16 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.plugin.surefire.version}</version>
+        <configuration>
+          <excludes>
+            <exclude>**/JavaReadCppWriteTestWithNONE.scala</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
