--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -65,10 +65,10 @@ jobs:
           cache: maven
           check-latest: false
       - name: Compile & Install Celeborn Java
-        shell: bash
+        shell: /usr/bin/bash
         run: build/mvn clean install -DskipTests
       - name: Run Java-Cpp Hybrid Integration Test
-        shell: bash
+        shell: /usr/bin/bash
         run: |
           build/mvn -pl worker \
             test-compile exec:java \
