--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -52,11 +52,11 @@ jobs:
         with:
           persist-credentials: 'false'
           fetch-depth: 0
-      - name: Compile Celeborn Cpp
-        working-directory: ./cpp
-        run: |
-          rm -rf build && mkdir -p build && cd build
-          cmake .. && make -j
+#      - name: Compile Celeborn Cpp
+#        working-directory: ./cpp
+#        run: |
+#          rm -rf build && mkdir -p build && cd build
+#          cmake .. && make -j
       - name: Setup JDK 8
         uses: actions/setup-java@v4
         with:
@@ -64,11 +64,13 @@ jobs:
           java-version: 8
           cache: maven
           check-latest: false
+      - name: Update Path
+        run: echo "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" >>"$GITHUB_PATH"
       - name: Compile & Install Celeborn Java
-        shell: /usr/bin/bash
+#        shell: /usr/bin/bash
         run: build/mvn clean install -DskipTests
       - name: Run Java-Cpp Hybrid Integration Test
-        shell: /usr/bin/bash
+#        shell: /usr/bin/bash
         run: |
           build/mvn -pl worker \
             test-compile exec:java \
