--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -57,6 +57,10 @@ jobs:
 #        run: |
 #          rm -rf build && mkdir -p build && cd build
 #          cmake .. && make -j
+      - name: Update Path
+        run: |
+          echo $PATH
+          echo "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" >>"$GITHUB_PATH"
       - name: Setup JDK 8
         uses: actions/setup-java@v4
         with:
@@ -64,8 +68,6 @@ jobs:
           java-version: 8
           cache: maven
           check-latest: false
-      - name: Update Path
-        run: echo "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" >>"$GITHUB_PATH"
       - name: Compile & Install Celeborn Java
 #        shell: /usr/bin/bash
         run: build/mvn clean install -DskipTests
