--- a/.github/workflows/cpp_integration.yml
+++ b/.github/workflows/cpp_integration.yml
@@ -28,7 +28,7 @@ on:
       - branch-*
 
 jobs:
-  celeborn_cpp_integration_test:
+  celeborn_cpp_unit_test:
     runs-on: ubuntu-22.04
     container: holylow/celeborn-cpp-dev:0.2
     steps:
@@ -44,3 +44,38 @@ jobs:
       - name: Run Unittests of Celeborn Cpp
         working-directory: ./cpp/build
         run: ctest
+  celeborn_cpp_integration_test:
+    runs-on: ubuntu-22.04
+    container: holylow/celeborn-cpp-dev:0.2
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          persist-credentials: 'false'
+          fetch-depth: 0
+      - name: Compile Celeborn Cpp
+        working-directory: ./cpp
+        run: |
+          rm -rf build && mkdir -p build && cd build
+          cmake .. && make -j
+      # This step is necessary because within container the setup-java step would pollute the $PATH
+      # and cause following steps fail. We manually back up the $PATH here to avoid the problem.
+      - name: Backup Path
+        run: |
+          echo $PATH
+          echo "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" >>"$GITHUB_PATH"
+      - name: Setup JDK 8
+        uses: actions/setup-java@v4
+        with:
+          distribution: zulu
+          java-version: 8
+          cache: maven
+          check-latest: false
+      - name: Compile & Install Celeborn Java
+        run: build/mvn clean install -DskipTests
+      - name: Run Java-Cpp Hybrid Integration Test
+        run: |
+          build/mvn -pl worker \
+            test-compile exec:java \
+            -Dexec.classpathScope="test" \
+            -Dexec.mainClass="org.apache.celeborn.service.deploy.cluster.JavaReadCppWriteTestWithNONE" \
+            -Dexec.args="-XX:MaxDirectMemorySize=2G"
